DTSCCI-1351: Hearing court location based on cml if toc performed.